# lumia-postgres-to-postgres-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yaml
airflow-service/: Dockerfile  pyproject.toml
airflow-service/dags/: lumia_postgres_to_postgres_hour.py
airflow-service/queries/: DML_d_calendar_update.sql  DML_d_city_update.sql  DML_d_country_update.sql  DML_d_product_update.sql  DML_d_user_update.sql  DML_f_sales_update.sql  DML_f_user_analytics.sql  DML_select_data.sql  DML_vacuum.sql
api-service/: pyproject.toml
api-service/src/: main.py  maintenance.py
api-service/src/api/v1/: api.py  config.py  sales.py  users.py
api-service/src/api/v1/crud/: users_crud.py
api-service/src/api/v1/schemas/: users_schemas.py
api-service/src/core/: config.py  db_helper.py  dependencies.py  models.py
api-service/src/models/: models.py
api-service/src/user/: crud.py  schemas.py  views.py
dwh-init-scripts/: 01_DDL_create_staging.sql  02_DDL_create_dwh.sql
